src/pages/ru/v1.19.0/rn-sdk/modules.mdx
---
title: "React Native SDK - Модули"
metaTitle: "React Native SDK - Модули"
metaDescription: "Список публичных модулей React Native SDK"
---
import LinkRow from '~/components/LinkRow.astro'
import Aside from '~/components/Aside.astro'
import ORCard from '~/components/Card/ORCard.astro'

React Native SDK экспортирует несколько компонентов и методов, позволяющих вам настроить запись:

## Connector

```js
interface IORTrackerConnector {
  startSession: (
    projectKey: string,
    optionsDict: Options,
    projectUrl?: string
  ) => void;
  setMetadata: (key: string, value: string) => void;
  event: (name: string, payload?: string) => void;
  setUserID: (userID: string) => void;
  userAnonymousID: (userID: string) => void;
}
```

- [startSession()](/rn-sdk/start): запускает запись.
- [setMetadata()](/rn-sdk/set-metadata): Устанавливает поле метаданных и сохраняет его как часть записи.
- [event()](/rn-sdk/event): С помощью этого метода отправляйте пользовательские события, чтобы они записывались как часть ваших воспроизведений.
- [setUserID()](/rn-sdk/set-user-id): Идентифицируйте ваших пользователей с помощью этого метода.
- [patchNetwork()](/rn-sdk/patch-network): Патчит fetch и/или XMLHttpRequest для записи сетевых запросов.
- 
## Components

<div class="or-rowlist">
  <LinkRow href="/rn-sdk/touch" title="ORTouchTrackingView" icon="canvas" desc="Представление, используемое для отслеживания событий касания." />
  <LinkRow href="/rn-sdk/sanitization" title="ORSanitizedView" icon="settings" desc="Представление, позволяющее вам санировать (или размывать) части вашей записи" />
  <LinkRow href="/rn-sdk/inputs" title="ORTrackedInput" icon="metadata" desc="TextInput, который записывает события ввода" />
  <LinkRow href="/rn-sdk/analytics" title="ORAnalyticsView" icon="ai" desc="Помеченное представление, которое отправляет событие, как только оно появляется на экране и когда покидает его" />
</div>
