src/pages/ru/v1.21.0/rn-sdk/modules.mdx
---
title: "React Native SDK - Модули"
metaTitle: "React Native SDK - Модули"
metaDescription: "Список публичных модулей React Native SDK"
---
import Aside from '~/components/Aside.astro'
import ORCard from '~/components/Card/ORCard.astro'

React Native SDK экспортирует несколько компонентов и методов, позволяющих вам настроить запись:

## Connector

```js
interface IORTrackerConnector {
  startSession: (
    projectKey: string,
    optionsDict: Options,
    projectUrl?: string
  ) => void;
  setMetadata: (key: string, value: string) => void;
  event: (name: string, payload?: string) => void;
  setUserID: (userID: string) => void;
  userAnonymousID: (userID: string) => void;
}
```

- [startSession()](/rn-sdk/start): запускает запись.
- [setMetadata()](/rn-sdk/set-metadata): Устанавливает поле метаданных и сохраняет его как часть записи.
- [event()](/rn-sdk/event): С помощью этого метода отправляйте пользовательские события, чтобы они записывались как часть ваших воспроизведений.
- [setUserID()](/rn-sdk/set-user-id): Идентифицируйте ваших пользователей с помощью этого метода.
- [patchNetwork()](/rn-sdk/patch-network): Патчит fetch и/или XMLHttpRequest для записи сетевых запросов.
- 
## Components

- [ORTouchTrackingView](/rn-sdk/touch): Представление, используемое для отслеживания событий касания.
- [ORSanitizedView](/rn-sdk/sanitization): Представление, позволяющее вам санировать (или размывать) части вашей записи
- [ORTrackedInput](/rn-sdk/inputs): TextInput, который записывает события ввода
- [ORAnalyticsView](/rn-sdk/analytics): Помеченное представление, которое отправляет событие, как только оно появляется на экране и когда покидает его
